# urfu_software_engineering_1

./: README.md
.github/workflows/: python-app.yml
hw1/: README.md  main.py
hw2/: README.md  pyproject.toml  summarizer.py  ui.py
hw3/: README.md  main.py  pyproject.toml  requirements.txt
hw3/app/: models.py
hw3/app/routes/: summarizer_router.py
hw3/app/services/: summarizer_service.py
hw4/: Dockerfile  Makefile  README.md  docker-compose.yml
hw4/nginx-conf/: Dockerfile  nginx.conf
hw5/: .gitignore  main.py  pyproject.toml  requirements.txt
hw5/app/: models.py
hw5/app/routes/: home_router.py  summarizer_router.py
hw5/app/services/: base_summarizer_service.py  local_summarizer_service.py  remote_summarizer_service.py
hw5/tests/: test_routes.py
