[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["Igor Inozemtsev <inozemtsev.iv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
transformers = "^4.35.2"
sentencepiece = "^0.1.99"
torch = "^2.1.1"
torchvision = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
