[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Igor Inozemtsev <inozemtsev.iv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
torch = "^2.1.1"
torchvision = "^0.16.1"
transformers = "^4.35.2"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
