[tool.poetry]
name = "hw5"
version = "0.1.0"
description = ""
authors = ["Igor Inozemtsev <inozemtsev.iv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
torch = "^2.1.1"
torchvision = "^0.16.1"
transformers = "^4.36.0"
sentencepiece = "^0.1.99"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

